Bug 1199118 - Don't use pragma comment in certificatecheck.cpp. r=glandium